# AnimeHelper-MCP

./: README.md  pyproject.toml  pytest.ini
anime_helper/: __init__.py  server.py  server_legacy.py
anime_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
anime_helper/core/: __init__.py  cache.py  http_client.py  normalizers.py
anime_helper/models/: __init__.py  types.py
anime_helper/tools/: __init__.py  airing.py  cache_tools.py  details.py  meta.py  nlp.py  resolve.py  search.py  trending.py
anime_helper/utils/: __init__.py  helpers.py
tests/: test_http_client.py  test_integration_live.py  test_meta.py
